add on hover colouring

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
     font-size: 20px;
     color: #fff;
     cursor: pointer;
-    margin: 11px;
+    margin: 10px;
 }
 
 form .display{
@@ -45,4 +45,8 @@ form .display input{
 }
 form input.size_of_button {
     width: 145px;
+}
+input[type="button"]:hover {
+    background-color: #f0f0f0; /* Change the color to your desired shade */
+    color: #000;
 }
